--- a/BlogPhone/Pages/goods.cshtml
+++ b/BlogPhone/Pages/goods.cshtml
@@ -69,10 +69,17 @@ else
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/index">Главное</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/goods">Тарифы</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/aboutUs">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a>
-</li></ul>
-</div>
-</li></ul>
+</li>
+@if(Model.IsAuthorize)
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a></li> 
+}
+else
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a></li>   
+}</ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
