--- a/BlogPhone/Pages/aboutUs.cshtml
+++ b/BlogPhone/Pages/aboutUs.cshtml
@@ -52,6 +52,7 @@
 
 @if(Model.IsAuthorize)
 {
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" style="color:coral" asp-page="/admin/aboutUsChange">Изменить</a></li>
     <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a></li>
     <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a></li> 
 }
@@ -70,10 +71,18 @@ else
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/index">Главное</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/goods">Тарифы</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/aboutUs">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a>
-</li></ul>
-</div>
-</li></ul>
+</li>
+@if(Model.IsAuthorize)
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" style="color:coral" asp-page="/admin/aboutUsChange">Изменить</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a></li> 
+}
+else
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a></li>   
+}</ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
@@ -87,13 +96,24 @@ else
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-40 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
-                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
+                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P1_Title</h2> @*@Model.AUI?.P1_Title*@
+                  <p class="u-text u-text-2">@Model.AUI?.P1_Text</p> @*@Model.AUI?.P1_Text*@
                 </div>
               </div>
-              <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="256" data-image-height="256">
-                <div class="u-container-layout u-container-layout-2"></div>
-              </div>
+                @if(@Model.AUI?.P1_ImageData is not null)
+                {
+                    <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20" data-image-width="256" data-image-height="256">
+                        <div class="u-container-layout u-container-layout-2">
+                            <img alt="aboutUsPhoto_1" style="width:120%; height:120%; border-radius: 100%" src="@ImageWorking.GetImageURLFromBytesArray(@Model.AUI.P1_ImageData)">
+                        </div>
+                    </div>   
+                }
+                else
+                {
+                    <div alt="aboutUsPhoto_1" class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="256" data-image-height="256">
+                        <div class="u-container-layout u-container-layout-2"></div>
+                    </div>          
+                }
             </div>
           </div>
         </div>
@@ -106,14 +126,24 @@ else
             <div class="u-layout-row">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <div alt="" class="u-image u-image-circle u-image-1" src="" data-image-width="256" data-image-height="256"></div>
+                    @if (@Model.AUI?.P2_ImageData is not null)
+                    {
+                        <div alt="aboutUsPhoto_2" class="u-image u-image-circle" src="@ImageWorking.GetImageURLFromBytesArray(@Model.AUI.P2_ImageData)" data-image-width="256" data-image-height="256">
+                            <div class="u-container-layout u-container-layout-2">
+                                <img alt="aboutUsPhoto_2" style="width:120%; height:120%; border-radius: 0% 20% 0% 20%" src="@ImageWorking.GetImageURLFromBytesArray(@Model.AUI.P2_ImageData)">
+                            </div>
+                        </div> 
+                    }
+                    else
+                    {
+                        <div alt="aboutUsPhoto_2" class="u-image u-image-circle u-image-1" src="" data-image-width="256" data-image-height="256"></div> 
+                    }
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
-                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
-                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
-                  <a href="" class="u-btn u-button-style u-btn-1">Button</a>
+                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P2_Title</h2> @*@Model.AUI?.P2_Title*@
+                  <p class="u-text u-text-2">@Model.AUI?.P2_Text</p> @*@Model.AUI?.P2_Text*@
                 </div>
               </div>
             </div>
@@ -121,8 +151,7 @@ else
         </div>
       </div>
     </section>
-    
-    
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-83d7"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">copyright 2022</p>
       </div></footer>
