--- a/BlogPhone/Pages/AboutUs.cshtml
+++ b/BlogPhone/Pages/AboutUs.cshtml
@@ -96,8 +96,8 @@ else
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-40 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P1_Title</h2> @*@Model.AUI?.P1_Title*@
-                  <p class="u-text u-text-2">@Model.AUI?.P1_Text</p> @*@Model.AUI?.P1_Text*@
+                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P1_Title</h2>
+                  <p class="u-text u-text-2">@Model.AUI?.P1_Text</p>
                 </div>
               </div>
                 @if(@Model.AUI?.P1_ImageData is not null)
@@ -142,8 +142,8 @@ else
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
-                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P2_Title</h2> @*@Model.AUI?.P2_Title*@
-                  <p class="u-text u-text-2">@Model.AUI?.P2_Text</p> @*@Model.AUI?.P2_Text*@
+                  <h2 class="u-text u-text-default u-text-1">@Model.AUI?.P2_Title</h2>
+                  <p class="u-text u-text-2">@Model.AUI?.P2_Text</p>
                 </div>
               </div>
             </div>
